# vps_manager_django_api

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini  schema.yml
applications/: models.py  serializers.py  urls.py  views.py
applications/fixtures/: initial_data.json
applications/migrations/: 0001_initial.py  0002_application_size_new.py  0003_copy_data_to_other_field.py  0004_remove_application_size_new_alter_application_size.py  0005_alter_application_size.py
practice_1/: .env  settings.py  urls.py
tests/: conftest.py  test_application.py  test_user.py
users/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
users/fixtures/: initial_data.json
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_profile_profile_profile_first_n_bcf119_idx_and_more.py  0004_remove_profile_position.py
utils/: sql_utils.py
vps/: filters.py  models.py  serializers.py  urls.py  views.py
vps/fixtures/: initial_data.json
vps/migrations/: 0001_initial.py  0002_alter_vps_id.py  0003_vps_maintained_by.py  0004_vps_deployed_applications.py  0005_alter_vps_cpu_alter_vps_hdd_alter_vps_ram.py
vps_manager_django_api/: asgi.py  paginations.py  settings.py  urls.py  wsgi.py
